// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Section/> when the children are HTML elements should render correctly 1`] = `
<Section
  title="test-title"
>
  <div
    className="flexColumn flexCenter test-fade-in-classes"
  >
    <h2
      className="sectionTitle"
    >
      test-title
    </h2>
    <SectionTile />
  </div>
</Section>
`;

exports[`<Section/> when the children are both components and HTML elements should render correctly 1`] = `
<Section
  title="test-title"
>
  <div
    className="flexColumn flexCenter test-fade-in-classes"
  >
    <h2
      className="sectionTitle"
    >
      test-title
    </h2>
    <div
      className="tileContainer"
    >
      <SectionTile
        key="0"
      />
    </div>
    <SectionTile />
  </div>
</Section>
`;

exports[`<Section/> when the children are react components should render correctly 1`] = `
<Section
  title="test-title"
>
  <div
    className="flexColumn flexCenter test-fade-in-classes"
  >
    <h2
      className="sectionTitle"
    >
      test-title
    </h2>
    <div
      className="tileContainer"
    >
      <SectionTile
        key="0"
      />
      <SectionTile
        key="1"
      />
    </div>
  </div>
</Section>
`;
